<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 driver for robotiq epick gripper</description>
  <maintainer email="safar@mowtio.in">safar V</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ur5_msgs</depend>
  <depend>geometry_msgs</depend>
   <depend>arm_firmware</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
